--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ JWT_SECRET=dev_secret
 CLIENT_URL=http://localhost:5173
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_gmail@gmail.com
-SMTP_PASS=your_app_password
-GOOGLE_CLIENT_ID=xxx
-GOOGLE_CLIENT_SECRET=xxx
+SMTP_USER=nguyenthienduy2004@gmail.com
+SMTP_PASS=clbd wjjs wara poht
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3000/api/auth/google/callback
