--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "create-admin": "node scripts/createAdmin.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
