--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "./bin/www",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
     }
   ],
   "routes": [
@@ -14,11 +17,6 @@
   ],
   "env": {
     "NODE_ENV": "production"
-  },
-  "functions": {
-    "bin/www": {
-      "maxDuration": 30
-    }
   },
   "installCommand": "npm install --legacy-peer-deps"
 }
