update upload image

--- a/.env
+++ b/.env
@@ -26,3 +26,7 @@ GEMINI_API_KEY=AIzaSyDt91g9nNFgR4Y-lO1J4nRvDvJ_QT1tE_M
 #ADMIN EMAIL
 ADMIN_EMAIL=everquill.work@gmail.com
 
+#CLOUDINARY
+CLOUDINARY_CLOUD_NAME=dk11ggeo5
+CLOUDINARY_API_KEY=736497932536752
+CLOUDINARY_API_SECRET=lVQZ_QGu5qRPdUHhutYs_iZCSl4
