--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "create-admin": "node scripts/createAdmin.js",
+    "migrate-avatars": "node scripts/migrateAvatars.js",
+    "migrate-templates": "node scripts/migrateTemplates.js",
     "build": "echo 'Build completed'"
   },
   "dependencies": {
@@ -17,6 +19,7 @@
     "@payos/node": "^1.0.10",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.18",
@@ -30,6 +33,7 @@
     "mongoose": "^8.18.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
