fix: remove jade view engine to resolve Vercel build error

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/everquill
 JWT_SECRET=dev_secret
-# CLIENT_URL=https://everquill-six.vercel.app
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://everquill-six.vercel.app
+# CLIENT_URL=http://localhost:5173
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=everquill.work@gmail.com
