--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:27017/everquill
+# MONGO_URI=mongodb://localhost:27017/everquill
+MONGO_URI=mongodb+srv://sonthien544_db_user:w2hJFLptARQATKTv@everquill.fygkqtl.mongodb.net/everquill
 JWT_SECRET=dev_secret
 CLIENT_URL=https://everquill-six.vercel.app
 # CLIENT_URL=http://localhost:5173
