--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ MONGO_URI=mongodb+srv://sonthien544_db_user:w2hJFLptARQATKTv@everquill.fygkqtl.m
 JWT_SECRET=dev_secret
 CLIENT_URL=https://everquill-six.vercel.app
 # CLIENT_URL=http://localhost:5173
-BACKEND_URL=https://exe-201-be-black.vercel.app/api/docs/
+BACKEND_URL=https://exe-201-be-black.vercel.app
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=everquill.work@gmail.com
