--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 # MONGO_URI=mongodb://localhost:27017/everquill
-MONGO_URI=mongodb+srv://sonthien544_db_user:w2hJFLptARQATKTv@everquill.fygkqtl.mongodb.net/everquill
+MONGO_URI=mongodb+srv://sonthien544_db_user:w2hJFLptARQATKTv@cluster0.j5sykcl.mongodb.net/everquill?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=dev_secret
 CLIENT_URL=https://everquill-six.vercel.app
 # CLIENT_URL=http://localhost:5173
